--- a/web_template/rt-template.html
+++ b/web_template/rt-template.html
@@ -147,7 +147,7 @@
                 <p class="und-note functional-link func-color">- Rarity levels are estimations according to <a href="wiki/rarity.html">this scale</a> and might be subject to changes due to different encounter assessment results, unless supported by official encounter rates, which are listed in <span class="rarity">red</span> under the rarity level if known.</p>
                 <p style="margin-top: 5px;">- There are 2 Sprites, the left one is normal sprite, the right one is the shiny sprite.</p>
 
-                <table style="border: hsl(211, 22%, 72%, 0.5) 2px solid; margin: 0px auto;">
+                <table class="trainer-tab" style="border: hsl(211, 22%, 72%, 0.5) 2px solid; margin: 0px auto;">
                 <tr class="pkm-table" style="border-bottom: hsl(211, 22%, 72%, 0.5) 2px solid;">
                     <td>Pokemon</td>
                     <td>Type</td>
@@ -273,13 +273,13 @@
 
             <hr class="contents-line">
 
-            <div class="rt-trainers func-color functional-link" id="rt-trainers">
+            <div class="rt-trainers func-color " id="rt-trainers">
                 <h2>Trainers</h2>
 
                 <p class="note"><span>Note</span>:</p>
                     <p class="und-note">- You can click on the trainer's name to go to their pokepaste for more details.</p>
 
-                <table class="trainer-tab">
+                <table class="trainer-tab functional-link">
                     <tr class="pkm-table">
                         <td>Trainers</td>
                         <td>Sprites</td>
@@ -342,7 +342,7 @@
                         <td><a href="abilities/pickup.html">Pickup</a></td>
                         <td>None</td>
                         <td>1 Speed</td>
-                        <td style="border-right: none;">41</td>
+                        <td style="border-right: none;">30</td>
                     </tr>
                     <tr class="pkm-table">
                         <td><img src="images/pkm_sprites/pidgey.gif" alt="Pidgey"></td>
@@ -353,16 +353,15 @@
                         </td>
                         <td>Lvl. 4</td>
                         <td>
-                            <p><a href="moves/growl.html">Growl</a></p>
                             <p><a href="moves/tackle.html">Tackle</a></p>
                         </td>
-                        <td><a href="abilities/gluttony.html">Gluttony</a></td>
+                        <td><a href="abilities/gluttony.html">Tangled Feet</a></td>
                         <td>None</td>
                         <td>1 Speed</td>
-                        <td style="border-right: none;">41</td>
+                        <td style="border-right: none;">32</td>
                     </tr>
                     <tr class="pkm-table">
-                        <td style="border-right: none;" colspan="10">96$</td>
+                        <td style="border-right: none;" colspan="10">72$</td>
                     </tr>
                 </table>
             </div>
