--- a/import/bg.html
+++ b/import/bg.html
@@ -1,1 +1,6 @@
-<img class="b-img" src="/images/logo-background/background-img.jpg">
+<div class="stars-overlay">
+    <div class="star" style="top: 50px; left: 100px;"></div>
+    <div class="star" style="top: 200px; left: 400px;"></div>
+  </div>
+
+  Glaciologists predict that half of the ice coverage in the Alps will have disappeared by the end of this century.
