--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Bronze Wiki</title>
     <link rel="stylesheet" href="/style-js/main.css">
+    <link rel="stylesheet" href="import/bg.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div id="bg"></div>
+    <div id="background"></div>
+    <div class="stars-overlay">
+        <div class="star" style="top: 50px; left: 100px;"></div>
+        <div class="star" style="top: 200px; left: 400px;"></div>
+      </div>
 
         <!-- ------------------------------------- NAV BAR --------------------------------------->
 
@@ -40,6 +46,7 @@
     <div id="sidebar"></div>
 
     <script src="/style-js/script.js"></script>
+    <script src="import/bg.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
