--- a/nav/area/routes/route_1.html
+++ b/nav/area/routes/route_1.html
@@ -6,12 +6,17 @@
     <title>Route 1 | Project Wiki </title>
     <link rel="icon" type="image/png" href="/favicon.ico" sizes="111x109"/>
     <link rel="stylesheet" href="/style-js/main.css">
+    <link rel="stylesheet" href="/import/bg.css">
     <link rel="stylesheet" href="/https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
     <div id="sidebar"></div>
 <body>
     <div id="bg"></div>
+    <div class="stars-overlay">
+          <div class="star" style="top: 50px; left: 100px;"></div>
+          <div class="star" style="top: 200px; left: 400px;"></div>
+        </div>
     <div class="home">
         <span>
 
@@ -441,6 +446,7 @@
                                             <!-- script link -->
 
     <script src="/style-js/script.js"></script>
+    <script src="/import/bg.js"></script>
 </body>
 </html>
 
