--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Bronze Wiki</title>
     <link rel="stylesheet" href="/style-js/main.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="import/bg.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -46,6 +47,7 @@
     <div id="sidebar"></div>
 
     <script src="/style-js/script.js"></script>
+    <script src="script.js"></script>
     <script src="import/bg.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
